--- a/index.html
+++ b/index.html
@@ -10,6 +10,44 @@
     <link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 </head>
 <body>
+    <header></header>
+
+    <nav>
+        <p><strong>Meet Karma</strong></p>
+        <p>How it works</p>
+        <p>Store</p>
+        <p>Blog</p>
+        <p>Help</p>
+        <p>Login</p>
+    </nav>
+
+    <main>
+           <h1>Introducing Karma</h1>
+           <P>Bring WiFi with you, everywhere you go</P>
+           <button>Learn more</button>
+
+    </main>
+
+    
+  <h2>Everyone needs a little Karma</h2>
+  <div class="photos">
+
+        <img id=img1 src="/img/icon-devices.svg" alt="devices" width="220px">
+        <img id=img2 src="/img/icon-coffee.svg" alt="coffee" width="220px">
+        <img id=img3 src="/img/icon-refill.svg" alt="refill" width="220px">
+
+    </div>
+
+   <div>
+     <p id="p1">Internet for all devices</p>
+     <p id="p2">Boost your Productivity</p>
+     <p id="p3">Pay as you go</p>
+   </div>
+
+
+
+
+
 
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
